--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%237F00FF'/%3E%3Ctext x='50' y='65' font-size='50' text-anchor='middle' fill='white'%3E⚙%3C/text%3E%3C/svg%3E">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <script src="auth.js" defer></script>
+        <script src="js/auth.js" defer></script>
     </head>
 
 <script>
@@ -21,7 +21,7 @@
       const navName = document.querySelector('.profile-text');
       const navPic = document.querySelector('.profile-pic');
       if (navName) navName.textContent = user.username;
-      if (navPic) navPic.src = user.profile_pic || 'images/default-avatar.png';
+      if (navPic) navPic.src = user.profile_pic || 'images/Pfp.jpeg';
     })
     .catch(() => {
       window.location.href = 'login.html';
@@ -113,6 +113,8 @@
                   <p>Executive.</p>
                 </div>
             </div>
+
+            <p class="email-para">Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
         </main>
     </body>
 </html>
