--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,8 @@
             </section>
         <h2>Get Started with Interview Preparation Videos</h2>
                 <p><button onclick="window.location.href='video.html'" class="btn">Get Started</button></p>
-        </main>       
+        </main>     
+        <script src="//code.tidio.co/rw4rpmojnnt1r95domoca6qdkldpjpbz.js" async></script>  
     </body>
 
 </html>
