--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
         <h2>Get Started with Interview Preparation Videos</h2>
                 <p><button onclick="window.location.href='video.html'" class="btn">Get Started</button></p>
         </main>     
-        <script src="//code.tidio.co/rw4rpmojnnt1r95domoca6qdkldpjpbz.js" async></script>  
+        <script src="https://code.tidio.co/rw4rpmojnnt1r95domoca6qdkldpjpbz.js" async></script>  
     </body>
 
 </html>
