Update profile images in contact.html

--- a/public/contact.html
+++ b/public/contact.html
@@ -65,31 +65,31 @@
             <h1>Contact Us</h1>
             <div class="founders">
                 <div class="Category">
-                <img src="images/Pfp.jpeg" alt="Aashish" class="profile-pic">
+                <img src="images/Aashish.jpeg" alt="Aashish" class="profile-pic">
                 <h3>Aashish Sivaram R</h3>
                 <p>Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
                 </div>
 
                 <div class="Category">
-                <img src="images/Pfp.jpeg" alt="Arvind" class="profile-pic">
+                <img src="images/Arvind.jpeg" alt="Arvind" class="profile-pic">
                 <h3>Arvind M A</h3>
                 <p>Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
                 </div>
 
                 <div class="Category">
-                <img src="images/Pfp.jpeg" alt="Adhithyan" class="profile-pic">
+                <img src="images/Adhithyan.jpeg" alt="Adhithyan" class="profile-pic">
                 <h3>Adhithyan M</h3>
                 <p>Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
                 </div>
 
                 <div class="Category">
-                <img src="images/Pfp.jpeg" alt="Chiranjeeve" class="profile-pic">
+                <img src="images/Chiranjeeve.jpeg" alt="Chiranjeeve" class="profile-pic">
                 <h3>Chiranjeeve K</h3>
                 <p>Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
                 </div>
                 
                 <div class="Category">
-                <img src="images/Pfp.jpeg" alt="Chiranjeeve" class="profile-pic">
+                <img src="images/Pfp.jpeg" alt="Hema" class="profile-pic">
                 <h3>Hema R</h3>
                 <p>Email: <a href="mailto:jobquest.contact@gmail.com">jobquest.contact@gmail.com</a></p>
                 </div>
