Update founder images in about.html

--- a/public/about.html
+++ b/public/about.html
@@ -90,25 +90,25 @@
 
             <div class="founders">
                 <div class="Category">
-                  <img src="images/Pfp.jpeg" alt="Aashish" class="profile-pic">
+                  <img src="images/Aashish.jpeg" alt="Aashish" class="profile-pic">
                   <h3>Aashish Sivaram R</h3>
                   <p>Executive.</p>
                 </div>
 
                 <div class="Category">
-                  <img src="images/Pfp.jpeg" alt="Arvind" class="profile-pic">
+                  <img src="images/Arvind.jpeg" alt="Arvind" class="profile-pic">
                   <h3>Arvind M A</h3>
                   <p>Executive.</p>
                 </div>
 
                 <div class="Category">
-                  <img src="images/Pfp.jpeg" alt="Adhithyan" class="profile-pic">
+                  <img src="images/Adhithyan.jpeg" alt="Adhithyan" class="profile-pic">
                   <h3>Adhithyan M</h3>
                   <p>Executive.</p>
                 </div>
 
                 <div class="Category">
-                  <img src="images/Pfp.jpeg" alt="Chiranjeeve" class="profile-pic">
+                  <img src="images/Chiranjeeve.jpeg" alt="Chiranjeeve" class="profile-pic">
                   <h3>Chiranjeeve K</h3>
                   <p>Executive.</p>
                 </div>
